# winapi-opengl-templates

./: .gitignore
.github/workflows/: 2d-example_release.yaml  build.yaml
2d-example/: 2d.cpp  2d.hpp  CMakeLists.txt  scene.cpp  scene.hpp
